# OSI-mapping

./: .gitignore  CONTRIBUTING.md  README.md  book.toml  validate.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
docs/: README.md  SUMMARY.md  ai-guidelines.md  annotated-example.md  concepts.md  derived-fields.md  design-rationale.md  fk-resolution.md  introduction.md  mapping-schema.md  motivation.md  product-market-fit-analysis.md  resolution-schema.md  schema-reference.md
engine/: ANALYTICS-VIEW-PLAN.md  Cargo.toml  ORIGIN-PLAN.md  PLAN.md  PRIMARY-KEYS-PLAN.md  README.md  SOURCE-REMOVAL-OPTIONS.md
engine-rs/: Cargo.toml  README.md  ROADMAP.md  TODOS.md
engine-rs/analysis/: NATURAL-KEYS.md  README.md
engine-rs/docs/: README.md  design-decisions.md  view-pipeline.md
engine-rs/plans/: ANALYTICS-PROVENANCE-PLAN.md  ANALYTICS-VIEW-PLAN.md  ASYMMETRY-ANALYSIS.md  ATOMIC-GROUPS-PLAN.md  BENCHMARK-EXAMPLE-PLAN.md  CI-RELEASE-PLAN.md  CLI-TEST-COMMAND-PLAN.md  CLUSTER-SEED-FORMAT-PLAN.md  COALESCE-PRIORITY-PLAN.md  CODE-COVERAGE-PLAN.md  CODE-QUALITY-PLAN.md  COMBINED-ETL-REVERSE-ETL-ANALYSIS.md  COMPOSITE-KEY-REFS-PLAN.md  COMPOSITE-TYPES-PLAN.md  COMPUTED-FIELDS-PLAN.md  CONSUMER-NAMING-PLAN.md  CRDT-ORDERING-PLAN.md  DBT-OUTPUT-PLAN.md  DEEP-NESTING-PLAN.md  DELETION-AS-FIELD-PLAN.md  DELTA-CHANGES-VIEW-PLAN.md  DELTA-RESERVED-COLUMNS-PLAN.md  DEPENDENT-INSERT-PLAN.md  DEPTH-MISMATCH-PLAN.md  DERIVED-TIMESTAMPS-PLAN.md  DIAMOND-AVOIDANCE-PLAN.md  DOCS-SITE-PLAN.md  DOT-PATH-EXPRESSIONS-PLAN.md  ELEMENT-DELETION-PLAN.md  ELEMENT-SOFT-DELETE-PLAN.md  ELEMENT-TOMBSTONES-AS-FIELD-PLAN.md  ENRICHED-EXPRESSIONS-PLAN.md  ETL-STATE-INPUT-PLAN.md  EVENTUAL-CONSISTENCY-PLAN.md  EXAMPLE-COVERAGE-PLAN.md  EXAMPLE-REDUCTION-PLAN.md  EXPRESSION-SAFETY-PLAN.md  FIX-SOFT-DELETE-EXAMPLE-PLAN.md  FK-REFERENCES-PLAN.md  FORWARD-VIEWS-PLAN.md  (+58 more)
engine-rs/src/: dag.rs  lib.rs  main.rs  model.rs  parser.rs  validate.rs  validate_expr.rs
engine-rs/src/render/: analytics.rs  delta.rs  enriched.rs  forward.rs  framing.rs  identity.rs  mod.rs  ordered.rs  resolution.rs  reverse.rs  sparql.rs  sql.rs
engine-rs/tests/: conformance.rs  integration.rs  proptest_structural.rs
example/: README.md  crm-openapi.yaml  mapping-crm.yaml  mapping-erp.yaml  mapping-webshop.yaml  model-acme.yaml  model-crm.yaml  model-erp.yaml  resolution-acme.yaml  webshop-openapi.yaml
examples/: MIGRATION-GAPS.md  README.md  mapping-crm.yaml  mapping-erp.yaml  mapping-webshop.yaml  model-acme.yaml  model-crm.yaml  model-erp.yaml  resolution-acme.yaml
sparql-spike/: Cargo.toml  README.md
sparql-spike/src/: main.rs
validation/: validate.py
(+191 files in other folders)
