[package]
name = "osi-engine"
version = "0.1.0"
edition = "2021"
description = "Reference engine for OSI mapping spec — renders mappings to a DAG of PostgreSQL views"
license = "MIT"

[features]
default = []
proptests = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
jsonschema = { version = "0.45.0", default-features = false }

[dev-dependencies]
proptest = "1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
glob = "0.3"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn" }
complexity = { level = "warn" }
perf = { level = "warn" }
needless_pass_by_value = "warn"
redundant_clone = "warn"
manual_let_else = "warn"
uninlined_format_args = "warn"

[[test]]
name = "proptest_structural"
path = "tests/proptest_structural.rs"
required-features = ["proptests"]
