[package]
name = "osi-engine"
version = "0.1.0"
edition = "2021"
description = "Reference engine for OSI mapping spec — renders mappings to a DAG of PostgreSQL views"
license = "MIT"

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
oxigraph = { version = "0.4", default-features = false }
sha2 = "0.10"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn" }
complexity = { level = "warn" }
perf = { level = "warn" }
